--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
-    font-size: 15pt;
-    background-color: black;
+    font-size: 12pt;
+    background-color: grey;
     color: white;
 }
   
 div{
-  width: 50%;
+  width: 40%;
   height: 100%;
+  float: left;
 }
 #word{
   float: left;
@@ -21,6 +22,13 @@ div{
   background-color: rgba(45, 45, 45);
   border-radius: 10px;
 }
-p{
-  margin: 0;
+input{
+  border-radius: 5px;
 }
+button{
+  float: right;
+}
+#buttonbox{
+  float: right;
+}
+
