--- a/style.css
+++ b/style.css
@@ -1,35 +1,47 @@
 body {
-    font-size: 12pt;
-    background-color: grey;
-    color: white;
-}
-  
-div{
-  width: 40%;
-  height: 100%;
-  float: left;
-}
-#word{
-  float: left;
-  float:top;
-}
-#mean{
-  float: right;
-  float: top;
-}
-#cup{
-  width: 100%;
-  height: 100%;
-  background-color: rgba(45, 45, 45);
-  border-radius: 10px;
-}
-input{
-  border-radius: 5px;
-}
-button{
-  float: right;
-}
-#buttonbox{
-  float: right;
+    font-family: Arial, sans-serif;
+    margin: 20px;
 }
 
+input {
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 200px;
+}
+
+button {
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+#word-list {
+    margin-top: 20px;
+}
+
+.word-item {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+body.dark-mode {
+    background-color: #333;
+    color: white;
+}
+
+input.dark-mode {
+    background-color: #555;
+    color: white;
+    border: 1px solid #888;
+}
+
+.word-item.dark-mode {
+    background-color: #555;
+    border-color: #888;
+}
+
+button.dark-mode {
+    background-color: #555;
+    color: white;
+    border: 1px solid #888;
+}
